<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="labs.sdm.l0501_threadsandasynctasks.DashboardActivity">

    <Button
        android:id="@+id/bProblem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="launchActivity"
        android:text="@string/not_working_button" />

    <Button
        android:id="@+id/bThreadmessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="launchActivity"
        android:text="@string/thread_message_button" />

    <Button
        android:id="@+id/bThreadRunnable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="launchActivity"
        android:text="@string/thread_runnable_button" />

    <Button
        android:id="@+id/bAsyncTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="launchActivity"
        android:text="@string/asynctask_button" />

</LinearLayout>
